Added ThreadPool class to compare performance to.

--- a/SingleProducerMultiConsumer/SingleProducerMultiConsumer.vcxproj.filters
+++ b/SingleProducerMultiConsumer/SingleProducerMultiConsumer.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="Profiler.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ThreadPool.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
