--- a/SingleProducerMultiConsumer/SingleProducerMultiConsumer.vcxproj
+++ b/SingleProducerMultiConsumer/SingleProducerMultiConsumer.vcxproj
@@ -123,6 +123,7 @@
   <ItemGroup>
     <ClInclude Include="Profiler.hpp" />
     <ClInclude Include="SPMPQueue.hpp" />
+    <ClInclude Include="ThreadPool.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
