--- a/SingleProducerMultiConsumer/SingleProducerMultiConsumer.vcxproj.filters
+++ b/SingleProducerMultiConsumer/SingleProducerMultiConsumer.vcxproj.filters
@@ -23,13 +23,16 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="SPMPQueue.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Profiler.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="ThreadPool.hpp">
+    <ClInclude Include="ForkJoinModel.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TaskBasedModel.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SPMCQueue.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
