--- a/SingleProducerMultiConsumer/SingleProducerMultiConsumer.vcxproj.filters
+++ b/SingleProducerMultiConsumer/SingleProducerMultiConsumer.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="Profiler.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="StdLocks.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Profiler.hpp">
@@ -33,6 +36,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="SPMCQueue.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="StdLocks.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
